sfdx-source/sfdx/main/default/objects/Product_Relation__c/Product_Relation__c.object-meta.xml
<CustomObject>
    <label>Product Relation</label>
    <nameField>
        <label>Relation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>