sfdx-source/sfdx/main/default/objects/Product_Relation__c/fields/EnablePairing__c.field-meta.xml
<CustomField>
    <fullName>EnablePairing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this Product Relation can be paired with its related Object in Lists.</description>
    <inlineHelpText>Check this box to pair this Product Relation with its related Object in Lists.</inlineHelpText>
    <label>EnablePairing</label>
    <type>Checkbox</type>
</CustomField>