sfdx-source/sfdx/main/default/objects/Product_Relation__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Related Products</relationshipLabel>
    <relationshipName>Event</relationshipName>
    <type>Lookup</type>
</CustomField>