sfdx-source/sfdx/main/default/objects/Product_Relation__c/fields/LineDescription__c.field-meta.xml
<CustomField>
    <fullName>LineDescription__c</fullName>
    <description>If not blank, this field will override the related Product&apos;s own Line Description field.</description>
    <inlineHelpText>Enter an alternate Line Description for the related Product.  Leave this field blank to use the Product&apos;s own Line Description in places like the checkout receipt.</inlineHelpText>
    <label>Line Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>