sfdx-source/sfdx/main/default/objects/Product_Relation__c/fields/PriceOverride__c.field-meta.xml
<CustomField>
    <fullName>PriceOverride__c</fullName>
    <description>An alternate Unit Price.</description>
    <inlineHelpText>Enter an alternate Unit Price for the Product.  If left blank, the Standard Price for the Product will be charged to the customer.</inlineHelpText>
    <label>Price Override</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>